# prokka-rs

./: Cargo.toml  PERL_PRODIGAL_DIFF_VERSION.txt  README.md
src/: codon_table.rs  config.rs  error.rs  genbank_to_fasta.rs  input.rs  lib.rs  locus_tag.rs  main.rs  model.rs  pipeline.rs
src/annotate/: blast.rs  database.rs  hmmer.rs  mod.rs
src/database/: clean.rs  list.rs  mod.rs  setup.rs
src/output/: fasta.rs  genbank.rs  gff.rs  mod.rs  tbl.rs  tsv.rs  txt.rs
src/postprocess/: gene_dedup.rs  locus_assign.rs  mod.rs  product.rs
src/predict/: cds.rs  crispr.rs  mod.rs  ncrna.rs  overlap.rs  rrna.rs  signalp.rs  trna.rs
tests/: blast_diagnostic.rs  integration.rs  round_trip.rs
