[package]
name = "prokka-rs"
version = "0.1.0"
edition = "2021"
description = "Rapid prokaryotic genome annotation — Prokka rewritten in Rust"
license = "GPL-3.0-only"
repository = "https://github.com/henriksson-lab/prokka-rs"
homepage = "https://github.com/henriksson-lab/prokka-rs"
keywords = ["bioinformatics", "genomics", "annotation", "prokaryote", "bacteria"]
categories = ["science", "command-line-utilities"]
readme = "README.md"

[lib]
name = "prokka_rs"
path = "src/lib.rs"

[[bin]]
name = "prokka-rs"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:chrono"]

[dependencies]
prodigal-rs = { path = "/home/mahogny/github/claude/prodigal" }
blast-rs = { path = "/home/mahogny/github/claude/newblast" }
hmmer-pure-rs = { path = "/home/mahogny/github/claude/hmmer-pure-rs" }
clap = { version = "4", features = ["derive"], optional = true }
chrono = { version = "0.4", optional = true }
md5 = "0.8"
indexmap = "2"
thiserror = "2"
rayon = "1"
regex = "1"
ureq = "3"
flate2 = "1"

[dev-dependencies]
tempfile = "3"
